--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'com.auth0:java-jwt:3.11.0'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'junit:junit:4.13.1'
+    compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
